latex_parser/latex_parser.go
// Code generated from Latex.g4 by ANTLR 4.13.2. DO NOT EDIT.

package latex_parser // Latex
import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type LatexParser struct {
	*antlr.BaseParser
}

var LatexParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func latexParserInit() {
  staticData := &LatexParserStaticData
  staticData.LiteralNames = []string{
    "", "'\\textbf{Title:}'", "'\\\\'", "'\\textbf{URL:} \\url{'", "'}'", 
    "'\\textbf{Created:}'", "'\\textbf{Last Updated:}'", "'\\'", "'}{'", 
    "'{'", "'\\item'", "'\\begin{itemize}'", "'\\end{itemize}'", "'\\begin{enumerate}'", 
    "'\\end{enumerate}'", "'\\begin{verbatim}'", "'\\end{verbatim}'", "", 
    "", "", "", "'\\n'", "", "'\\r'",
  }
  staticData.SymbolicNames = []string{
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "LETTER", "PUNCTUATION", "SYMBOL", "NUMBER", "NEWLINE", "WS", "CR",
  }
  staticData.RuleNames = []string{
    "latex", "note_title", "note_url", "note_created", "note_updated", "note_text", 
    "text", "line_break", "empty_line", "escaped_word", "composite_tag_separator", 
    "tag", "word", "verbatim_content", "verbatim_line", "block_line", "block_item", 
    "block",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// LatexParserInit initializes any static state used to implement LatexParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewLatexParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func LatexParserInit() {
  staticData := &LatexParserStaticData
  staticData.once.Do(latexParserInit)
}

// NewLatexParser produces a new parser instance for the optional input antlr.TokenStream.
func NewLatexParser(input antlr.TokenStream) *LatexParser {
	LatexParserInit()
	this := new(LatexParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &LatexParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Latex.g4"

	return this
}


// LatexParser tokens.
const (
	LatexParserEOF = antlr.TokenEOF
	LatexParserT__0 = 1
	LatexParserT__1 = 2
	LatexParserT__2 = 3
	LatexParserT__3 = 4
	LatexParserT__4 = 5
	LatexParserT__5 = 6
	LatexParserT__6 = 7
	LatexParserT__7 = 8
	LatexParserT__8 = 9
	LatexParserT__9 = 10
	LatexParserT__10 = 11
	LatexParserT__11 = 12
	LatexParserT__12 = 13
	LatexParserT__13 = 14
	LatexParserT__14 = 15
	LatexParserT__15 = 16
	LatexParserLETTER = 17
	LatexParserPUNCTUATION = 18
	LatexParserSYMBOL = 19
	LatexParserNUMBER = 20
	LatexParserNEWLINE = 21
	LatexParserWS = 22
	LatexParserCR = 23
)

// LatexParser rules.
const (
	LatexParserRULE_latex = 0
	LatexParserRULE_note_title = 1
	LatexParserRULE_note_url = 2
	LatexParserRULE_note_created = 3
	LatexParserRULE_note_updated = 4
	LatexParserRULE_note_text = 5
	LatexParserRULE_text = 6
	LatexParserRULE_line_break = 7
	LatexParserRULE_empty_line = 8
	LatexParserRULE_escaped_word = 9
	LatexParserRULE_composite_tag_separator = 10
	LatexParserRULE_tag = 11
	LatexParserRULE_word = 12
	LatexParserRULE_verbatim_content = 13
	LatexParserRULE_verbatim_line = 14
	LatexParserRULE_block_line = 15
	LatexParserRULE_block_item = 16
	LatexParserRULE_block = 17
)

// ILatexContext is an interface to support dynamic dispatch.
type ILatexContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Note_title() INote_titleContext
	Note_url() INote_urlContext
	Note_created() INote_createdContext
	Note_updated() INote_updatedContext
	Line_break() ILine_breakContext
	Note_text() INote_textContext
	EOF() antlr.TerminalNode
	AllNEWLINE() []antlr.TerminalNode
	NEWLINE(i int) antlr.TerminalNode

	// IsLatexContext differentiates from other interfaces.
	IsLatexContext()
}

type LatexContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLatexContext() *LatexContext {
	var p = new(LatexContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_latex
	return p
}

func InitEmptyLatexContext(p *LatexContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_latex
}

func (*LatexContext) IsLatexContext() {}

func NewLatexContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LatexContext {
	var p = new(LatexContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LatexParserRULE_latex

	return p
}

func (s *LatexContext) GetParser() antlr.Parser { return s.parser }

func (s *LatexContext) Note_title() INote_titleContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INote_titleContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INote_titleContext)
}

func (s *LatexContext) Note_url() INote_urlContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INote_urlContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INote_urlContext)
}

func (s *LatexContext) Note_created() INote_createdContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INote_createdContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INote_createdContext)
}

func (s *LatexContext) Note_updated() INote_updatedContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INote_updatedContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INote_updatedContext)
}

func (s *LatexContext) Line_break() ILine_breakContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILine_breakContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILine_breakContext)
}

func (s *LatexContext) Note_text() INote_textContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INote_textContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INote_textContext)
}

func (s *LatexContext) EOF() antlr.TerminalNode {
	return s.GetToken(LatexParserEOF, 0)
}

func (s *LatexContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(LatexParserNEWLINE)
}

func (s *LatexContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(LatexParserNEWLINE, i)
}

func (s *LatexContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LatexContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *LatexContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LatexListener); ok {
		listenerT.EnterLatex(s)
	}
}

func (s *LatexContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LatexListener); ok {
		listenerT.ExitLatex(s)
	}
}




func (p *LatexParser) Latex() (localctx ILatexContext) {
	localctx = NewLatexContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LatexParserRULE_latex)
	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)
		p.Note_title()
	}
	{
		p.SetState(37)
		p.Note_url()
	}
	{
		p.SetState(38)
		p.Note_created()
	}
	{
		p.SetState(39)
		p.Note_updated()
	}
	{
		p.SetState(40)
		p.Line_break()
	}
	p.SetState(44)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(41)
				p.Match(LatexParserNEWLINE)
				if p.HasError() {
						// Recognition error - abort rule
						goto errorExit
				}
			}


		}
		p.SetState(46)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	{
		p.SetState(47)
		p.Note_text()
	}
	{
		p.SetState(48)
		p.Match(LatexParserEOF)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// INote_titleContext is an interface to support dynamic dispatch.
type INote_titleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode
	AllWord() []IWordContext
	Word(i int) IWordContext
	NEWLINE() antlr.TerminalNode

	// IsNote_titleContext differentiates from other interfaces.
	IsNote_titleContext()
}

type Note_titleContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNote_titleContext() *Note_titleContext {
	var p = new(Note_titleContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_note_title
	return p
}

func InitEmptyNote_titleContext(p *Note_titleContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_note_title
}

func (*Note_titleContext) IsNote_titleContext() {}

func NewNote_titleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Note_titleContext {
	var p = new(Note_titleContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LatexParserRULE_note_title

	return p
}

func (s *Note_titleContext) GetParser() antlr.Parser { return s.parser }

func (s *Note_titleContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(LatexParserWS)
}

func (s *Note_titleContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(LatexParserWS, i)
}

func (s *Note_titleContext) AllWord() []IWordContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IWordContext); ok {
			len++
		}
	}

	tst := make([]IWordContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IWordContext); ok {
			tst[i] = t.(IWordContext)
			i++
		}
	}

	return tst
}

func (s *Note_titleContext) Word(i int) IWordContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWordContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWordContext)
}

func (s *Note_titleContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(LatexParserNEWLINE, 0)
}

func (s *Note_titleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Note_titleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Note_titleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LatexListener); ok {
		listenerT.EnterNote_title(s)
	}
}

func (s *Note_titleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LatexListener); ok {
		listenerT.ExitNote_title(s)
	}
}




func (p *LatexParser) Note_title() (localctx INote_titleContext) {
	localctx = NewNote_titleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LatexParserRULE_note_title)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.Match(LatexParserT__0)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(51)
				p.Match(LatexParserWS)
				if p.HasError() {
						// Recognition error - abort rule
						goto errorExit
				}
			}


		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 5636224) != 0) {
		{
			p.SetState(57)
			p.Word()
		}


		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(62)
		p.Match(LatexParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	if _la == LatexParserNEWLINE {
		{
			p.SetState(63)
			p.Match(LatexParserNEWLINE)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}

	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// INote_urlContext is an interface to support dynamic dispatch.
type INote_urlContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllWord() []IWordContext
	Word(i int) IWordContext
	NEWLINE() antlr.TerminalNode

	// IsNote_urlContext differentiates from other interfaces.
	IsNote_urlContext()
}

type Note_urlContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNote_urlContext() *Note_urlContext {
	var p = new(Note_urlContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_note_url
	return p
}

func InitEmptyNote_urlContext(p *Note_urlContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_note_url
}

func (*Note_urlContext) IsNote_urlContext() {}

func NewNote_urlContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Note_urlContext {
	var p = new(Note_urlContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LatexParserRULE_note_url

	return p
}

func (s *Note_urlContext) GetParser() antlr.Parser { return s.parser }

func (s *Note_urlContext) AllWord() []IWordContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IWordContext); ok {
			len++
		}
	}

	tst := make([]IWordContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IWordContext); ok {
			tst[i] = t.(IWordContext)
			i++
		}
	}

	return tst
}

func (s *Note_urlContext) Word(i int) IWordContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWordContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWordContext)
}

func (s *Note_urlContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(LatexParserNEWLINE, 0)
}

func (s *Note_urlContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Note_urlContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Note_urlContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LatexListener); ok {
		listenerT.EnterNote_url(s)
	}
}

func (s *Note_urlContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LatexListener); ok {
		listenerT.ExitNote_url(s)
	}
}




func (p *LatexParser) Note_url() (localctx INote_urlContext) {
	localctx = NewNote_urlContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LatexParserRULE_note_url)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(66)
		p.Match(LatexParserT__2)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 5636224) != 0) {
		{
			p.SetState(67)
			p.Word()
		}


		p.SetState(70)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(72)
		p.Match(LatexParserT__3)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(73)
		p.Match(LatexParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	if _la == LatexParserNEWLINE {
		{
			p.SetState(74)
			p.Match(LatexParserNEWLINE)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}

	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// INote_createdContext is an interface to support dynamic dispatch.
type INote_createdContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode
	AllWord() []IWordContext
	Word(i int) IWordContext
	NEWLINE() antlr.TerminalNode

	// IsNote_createdContext differentiates from other interfaces.
	IsNote_createdContext()
}

type Note_createdContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNote_createdContext() *Note_createdContext {
	var p = new(Note_createdContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_note_created
	return p
}

func InitEmptyNote_createdContext(p *Note_createdContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_note_created
}

func (*Note_createdContext) IsNote_createdContext() {}

func NewNote_createdContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Note_createdContext {
	var p = new(Note_createdContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LatexParserRULE_note_created

	return p
}

func (s *Note_createdContext) GetParser() antlr.Parser { return s.parser }

func (s *Note_createdContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(LatexParserWS)
}

func (s *Note_createdContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(LatexParserWS, i)
}

func (s *Note_createdContext) AllWord() []IWordContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IWordContext); ok {
			len++
		}
	}

	tst := make([]IWordContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IWordContext); ok {
			tst[i] = t.(IWordContext)
			i++
		}
	}

	return tst
}

func (s *Note_createdContext) Word(i int) IWordContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWordContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWordContext)
}

func (s *Note_createdContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(LatexParserNEWLINE, 0)
}

func (s *Note_createdContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Note_createdContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Note_createdContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LatexListener); ok {
		listenerT.EnterNote_created(s)
	}
}

func (s *Note_createdContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LatexListener); ok {
		listenerT.ExitNote_created(s)
	}
}




func (p *LatexParser) Note_created() (localctx INote_createdContext) {
	localctx = NewNote_createdContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, LatexParserRULE_note_created)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(77)
		p.Match(LatexParserT__4)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(78)
				p.Match(LatexParserWS)
				if p.HasError() {
						// Recognition error - abort rule
						goto errorExit
				}
			}


		}
		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(85)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 5636224) != 0) {
		{
			p.SetState(84)
			p.Word()
		}


		p.SetState(87)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(89)
		p.Match(LatexParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(91)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	if _la == LatexParserNEWLINE {
		{
			p.SetState(90)
			p.Match(LatexParserNEWLINE)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}

	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// INote_updatedContext is an interface to support dynamic dispatch.
type INote_updatedContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode
	AllWord() []IWordContext
	Word(i int) IWordContext
	NEWLINE() antlr.TerminalNode

	// IsNote_updatedContext differentiates from other interfaces.
	IsNote_updatedContext()
}

type Note_updatedContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNote_updatedContext() *Note_updatedContext {
	var p = new(Note_updatedContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_note_updated
	return p
}

func InitEmptyNote_updatedContext(p *Note_updatedContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LatexParserRULE_note_updated
}

func (*Note_updatedContext) IsNote_updatedContext() {}

func NewNote_updatedContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Note_updatedContext {
	var p = new(Note_updatedContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LatexParserRULE_note_updated

	return p
}

func (s *Note_updatedContext) GetParser() antlr.Parser { return s.parser }

func (s *Note_updatedContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(LatexParserWS)
}

func (s *Note_updatedContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(LatexParserWS, i)
}

func (s *Note_updatedContext) AllWord() []IWordContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IWordContext); ok {
			len++
		}
	}

	tst := make([]IWordContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IWordContext); ok {
			tst[i] = t.(IWordContext)
			i++
		}
	}

	return tst
}

func (s *Note_updatedContext) Word(i int) IWordContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWordContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWordContext)
}

func (s *Note_updatedContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(LatexParserNEWLINE, 0)
}

func (s *Note_updatedContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Note_updatedContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

